basic html structure

--- a/index.html
+++ b/index.html
@@ -6,6 +6,26 @@
          <link href="css/style.css" type="text/css"  rel="stylesheet"/>
      </head>
      <body>
-         <h1>Hello am ready </h1>
+         <header>
+             header
+         </header>
+         <main>
+                 
+                <section id="filter">
+
+
+                </section>
+                <section id="accomodation">
+
+
+                </section>
+                <section id="activites">
+
+
+                </section>
+         </main>
+         <footer>
+                Footer 
+         </footer>
      </body>
  </html>
